--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,43 @@
-# Dependencies
-node_modules/
-dist/
-*.tsbuildinfo
+#Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+.flattened-pom.xml
 
-# Environment
-.env*
-!.env.example
+# Eclipse
+.project
+.classpath
+.settings/
+bin/
 
-# IDE
-.idea/
-.vscode/
-*.code-workspace
+# IntelliJ
+.idea
+*.ipr
+*.iml
+*.iws
 
-# OS files
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode
+.factorypath
+
+# OSX
 .DS_Store
-Thumbs.db
 
-# Logs
-*.log
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# Local environment
+.env
+
+# Plugin directory
+/.quarkus/cli/plugins/
