--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,10 @@ nb-configuration.xml
 # Local environment
 .env
 
+# Application logs
+logs/
+*.log
+*.log.*
+
 # Plugin directory
 /.quarkus/cli/plugins/
